--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 debug/
 target/
 dist/
-export/
+export/*
 !export/README.md
 
 # Remove Cargo.lock from gitignore if creating an executable, leave it for libraries
